# elsst-benchmark-baselines

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: evaluator.md
release/: release_audit.json
scripts/: audit_release.py  export_full_internal_datasets.py  export_standard_datasets.py  publish_hf_dataset.py
src/elsst_baselines/: __init__.py
src/elsst_baselines/common/: __init__.py  gpu.py  introspection.py  jsonl.py  lora.py
src/elsst_baselines/evaluator/: __init__.py  data.py  leaderboard.py  result.py  track1.py  track2.py  validation.py
src/elsst_baselines/generation/: __init__.py  dataset.py  evaluate.py  modeling.py  parsing.py  scoring.py  train_dpo.py  train_orpo.py  train_sft.py  training.py
src/elsst_baselines/remote/: __init__.py  run.py
src/elsst_baselines/retrieval/: __init__.py  dataset.py  evaluate.py  infer.py  modeling.py  train.py
tests/: test_baselines_cli.py  test_baselines_core.py  test_evaluator.py  test_export_standard_datasets.py  test_full_internal_exports.py
track1/: README.md
track2/: README.md
